# open-energy-audit-toolkit

./: README.md  pyproject.toml
data/: sample_inputs.xlsx  sample_weather.csv
examples/: demo_sec_and_bins.py  run_kpi_from_excel.py  run_weather_from_csv.py
src/energy_audit_toolkit/: conversions.py  kpi.py  schedules.py  weather_bins.py
src/energy_audit_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/open_energy_audit_toolkit.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_conversions.py  test_kpi.py  test_schedules.py  test_weather_bins.py
